--- a/nginx.conf
+++ b/nginx.conf
@@ -48,7 +48,7 @@ http {
           root   /usr/share/nginx/html;
           try_files $uri /images/placeholder.jpg;
         }
-        location /api/catalogue/ { proxy_pass http://catalogue.nareshveeranala.site:8080/; }
+        location /api/catalogue/ { proxy_pass http://catalogue.nareshveeranala.shop:8080/; }
         location /api/user/ { proxy_pass http://locahost:8080/; }
         location /api/cart/ { proxy_pass http://locahost:8080/; }
         location /api/shipping/ { proxy_pass http://locahost:8080/; }
